index.html common DOM

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>Обо мне</title>
@@ -11,6 +11,50 @@
 	<link rel="stylesheet" type="text/css" href="css/hello.css">
 </head>
 <body>
+	<div class="wrapper">
+		<header class="header">
+			<div class="header_logo">
+				<img src="images/scrubs.jpg" alt="logo">
+			</div>
 
+			<div class="header_name">
+				<span>Анатолий Анатольев</span>
+			</div>	
+
+			<div class="contacts">
+				<span>Мои контакты</span>
+			</div>
+
+		</header>
+
+		<main class="container">
+			
+
+		</main>
+
+		<aside class="sidebar">
+			
+			<ul class="sidebar_menu">
+				<li class="sidebar_menu__about">Обо мне</li>
+				<li class="sidebar_menu__career">Карьерный путь</li>
+				<li class="sidebar_menu__portfolio">Портфолио</li>
+			</ul>
+
+		</aside>
+	</div>
+	
+	<footer class="footer">
+		
+		<div class="footer_conf">
+			<span>&copy; Конфиденциальность сайта</span>
+		</div>
+		<ul class="footer_social">
+			<li class="footer_social__fb"><a href="#facebook">Facebook</a></li>
+			<li class="footer_social__vk"><a href="#vkontakte">Vkontakte</a></li>
+			<li class="footer_social__tw"><a href="#twitter">Twitter</a></li>
+		</ul>
+
+
+	</footer>
 </body>
 </html>
