index.html common DOM -2

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<div class="wrapper">
+	<div class="container">
 		<header class="header">
 			<div class="header_logo">
 				<img src="images/scrubs.jpg" alt="logo">
@@ -42,7 +43,7 @@
 
 		</aside>
 	</div>
-	
+	</div>
 	<footer class="footer">
 		
 		<div class="footer_conf">
