--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 		</header>
 
 		<main class="container">
-			
+			<p><a href="">
+					Visited
+				</a></p>
 
 		</main>
 
@@ -42,6 +44,7 @@
 			</ul>
 
 		</aside>
+		<div class="empty"></div>
 	</div>
 	</div>
 	<footer class="footer">
@@ -49,10 +52,11 @@
 		<div class="footer_conf">
 			<span>&copy; Конфиденциальность сайта</span>
 		</div>
+
 		<ul class="footer_social">
-			<li class="footer_social__fb"><a href="#facebook">Facebook</a></li>
-			<li class="footer_social__vk"><a href="#vkontakte">Vkontakte</a></li>
-			<li class="footer_social__tw"><a href="#twitter">Twitter</a></li>
+			<li ><a class="footer_social__fb" href="https://google.com"></a></li>
+			<li ><a class="footer_social__vk" href="#vkontakte"></a></li>
+			<li ><a class="footer_social__tw" href="#twitter"></a></li>
 		</ul>
 
 
