header is ready

--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
 			<div class="header_contacts">
 				<a href="#" title="" >Мои контакты</a>
 				
-				<div class="cont_pallete">
-					<div class="cont_pallete_arrow_up"></div>
-					<ul class="cont_pallete_list">
+					<ul class="cont_pallete">
 						<li class="cont_pallete_email"><a href="#">anatoly@mail.ru</a></li>
 						<li class="cont_pallete_tel"><a href="#">+7 987 345 62 12</a></li>
 						<li class="cont_pallete_skype"><a href="#">anatoly_</a></li>
 					</ul>
-				</div>
-				
 
 			</div>
 		</div>
