--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
 		</header>
 
 		<div class="container">
-			<main class="container">
-				
+			<main class="content">
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis	</p>
 
 			</main>
 
 			<aside class="sidebar">
 				
 				<ul class="sidebar_menu">
-					<li class="sidebar_menu__about">Обо мне</li>
-					<li class="sidebar_menu__career">Карьерный путь</li>
-					<li class="sidebar_menu__portfolio">Портфолио</li>
+					<li class="sidebar_menu__about"><a href="#">Обо мне</a></li>
+					<li class="sidebar_menu__career"><a href="#">Карьерный путь</a></li>
+					<li class="sidebar_menu__portfolio"><a href="#">Портфолио</a></li>
 				</ul>
 
+			
 			</aside>
 			<div class="empty"></div>
 		</div>
