the page portfolio is ready

--- a/career.html
+++ b/career.html
@@ -53,13 +53,13 @@
 			</main>
 
 			<aside class="sidebar">
-				
+			<nav>	
 				<ul class="sidebar_menu">
 					<li class="sidebar_menu__about"><a href="#">Обо мне</a></li>
 					<li class="sidebar_menu__career"><a href="#">Карьерный путь</a></li>
 					<li class="sidebar_menu__portfolio"><a href="#">Портфолио</a></li>
 				</ul>
-
+			</nav>
 			
 			</aside>
 			<div class="empty"></div>
